--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,9 +1,12 @@
 <h1>All Cars</h1>
 
-<ul>
   <% @cars.each do |car| %>
-    <li>
-      <%= link_to "#{car.brand} #{car.model}", car_path(car) %>
-    </li>
+    <h2><%= car.brand %></h2>
+    <h3><%= car.model %></h2>
+    <p>Year: <%= car.year %></p>
+    <p>Fuel: <%= car.fuel%></p>
+    <p><%= car.created_at.strftime("%b %e, %l:%M %p") %></p>
+    <p><%= car.owner.nickname %></p>
+      <%= link_to "💬Comment", car_path(car) %>
+    <hr>
   <% end %>
-</ul>
